# KerEx

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: publish.yaml  tests_jax.yaml  tests_tensorflow.yaml
src/keras_addon/blocks/: __init__.py
src/keras_addon/blocks/attention/: __init__.py  base_attention.py
src/keras_addon/blocks/autoencoder/: __init__.py  base_block.py  base_decoder.py  base_encoder.py  decoder.py  encoder.py
src/keras_addon/blocks/tsmixer/: __init__.py
src/keras_addon/callbacks/: __init__.py
src/keras_addon/layers/: __init__.py
src/keras_addon/layers/conv/: __init__.py
src/keras_addon/layers/fno/: __init__.py  base_fno.py  base_spectral_conv.py  fno.py  spectral_conv.py  spectral_conv1d.py  spectral_conv2d.py
src/keras_addon/layers/wrapper/: attention.py  residual.py
src/keras_addon/models/: __init__.py
src/keras_addon/models/autoencoder/: base_models.py  fully_convolutional_network.py  unet.py
src/keras_addon/models/neural_operator/: __init__.py  base_neural_operator.py  neural_operator.py
src/keras_addon/models/tsmixer/: tsmixer.py
src/keras_addon/ops/: helper.py
src/keras_addon/ops/fft/: tensorflow.py
src/kerex/layers/fno/: base_fno.py
src/kerex/layers/fno/spectral_conv/: base_spectral_conv.py
src/kerex/layers/wrapper/: temporal_slice.py
src/kerex/ops/: __init__.py  helper.py
src/kerex/ops/fft/: jax.py
tests/: base_fcn_test.py  base_unet_test.py
tests/layers/: base_spectral_conv_test.py
tests/models/: base_fcn_test.py  base_neural_operator_test.py  base_unet_test.py  tsmixer_test.py
(+1 files in other folders)
