[project]
name = "keras-addon"
version = "1.0.0"
description = "Keras Addons for Python"
authors = [
  { name="Mathies Wedler", email="mathies.wedler@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "keras",
  "packaging"
]
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
tensorflow = [
  "tensorflow"
]
jax = [
  "jax",
  "jaxlib"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/MathiesW/2022-code-surface-similarity-parameter-ml-loss-metric"
"Source" = "https://github.com/MathiesW/2022-code-surface-similarity-parameter-ml-loss-metric"